SG-2004-03-03-3: Bugfix:    The clients died when a wrong security mode is
                            specified in the bootstrap file
                 Changed:   all
                 Review:    pending

SG-2004-03-03-2: Bugfix:    the product mode is displayed again with -help
                            in the clientes
                 Changed:   all
                 Review:    pending

AS-2004-03-03-1: Cleanup:   SGEEE reference removals. Set version string to
                            "6.0Beta" (code is not in Beta yet!)

CR-2004-03-03-1: Cleanup:   removed most of #ifndef ENABLE_NGC code. Still
                            52 ENABLE_NGC defines in source code.
                 Review:    pending
                 Changed:   removed unused code 

DT-2004-03-03-2: Bugfix:    o Minor fix to DT-2004-03-03-0
                 Changed:   Flatfile spooling

DT-2004-03-03-1: Bugfix:    o AS-2004-03-03-0 wasn't the best fix.
                 Changed:   Flatfile spooling

AS-2004-03-03-0: Bugfix:    Fix DT-2004-03-03-0 did not compile on all
                            machines

DT-2004-03-03-0: Bugfix:    o Flatfile spooling now checks for duplicate
                              attributes.
                 Changed:   Flatfile spooling
                 Issue:     732

SG-2004-03-03-1: Bugfix:    third part of removing SGE - simplefying
                            the feature set code
                 Changed:   qmaster
                 Review:    pending

AA-2004-03-03-0: Bugfix:    - qi display
                            - uppercase shortcuts
                            - q customize
                            - job dialogue segv for jobcustomize
                            - ticket dialogue
                            - qmon man page
                 Issues:    734, 723, 680, 681, 725, 736, 747, 726            
                 Changed:   qmon
                 Review:    pending

CR-2004-03-03-0: Bugfix:    - additional parameter for cl_com_gethostname(), 